refactor(module): change account service name

--- a/nginx.conf
+++ b/nginx.conf
@@ -9,8 +9,8 @@ http {
 
         root /usr/share/nginx/html;
 
-        location /1.0/authentication {
-            proxy_pass http://authentication:3000;
+        location /1.0/account {
+            proxy_pass http://account:3000;
         }
     }
 }
