refactor(config): change account route

--- a/nginx.conf
+++ b/nginx.conf
@@ -9,7 +9,7 @@ http {
 
         root /usr/share/nginx/html;
 
-        location /1.0/account {
+        location /1.0/accounts {
             proxy_pass http://account:3000;
         }
     }
