refactor(authentication): update authentication from nginx config

--- a/nginx.conf
+++ b/nginx.conf
@@ -9,8 +9,61 @@ http {
 
         root /usr/share/nginx/html;
 
-        location /1.0/accounts {
-            proxy_pass http://account:3000;
+        location /1.0/accounts/authenticate {
+            if ($request_method = OPTIONS) {
+                return 204;
+            }
+
+            internal;
+
+            proxy_pass_request_body off;
+            proxy_set_header Content-Length "";
+            proxy_set_header X-Original-URI $request_uri;
+
+            proxy_pass http://account:3000/1.0/accounts/authenticate;
+        }
+
+        location /1.0/accounts/check {
+            proxy_pass http://account:3000/1.0/accounts/check;
+        }
+
+        location /1.0/accounts/login {
+            proxy_pass http://account:3000/1.0/accounts/login;
+        }
+
+        location /1.0/accounts/all {
+            auth_request /1.0/accounts/authenticate;
+            proxy_pass http://account:3000/1.0/accounts/all;
+        }
+
+        location /1.0/accounts/users {
+            auth_request /1.0/accounts/authenticate;
+            proxy_pass http://account:3000/1.0/accounts/users;
+        }
+
+        location /1.0/accounts/restorers {
+            auth_request /1.0/accounts/authenticate;
+            proxy_pass http://account:3000/1.0/accounts/restorers;
+        }
+
+        location /1.0/accounts/deliverers {
+            auth_request /1.0/accounts/authenticate;
+            proxy_pass http://account:3000/1.0/accounts/deliverers;
+        }
+
+        location /1.0/accounts/devlopers {
+            auth_request /1.0/accounts/authenticate;
+            proxy_pass http://account:3000/1.0/accounts/devlopers;
+        }
+
+        location /1.0/accounts/marketing {
+            auth_request /1.0/accounts/authenticate;
+            proxy_pass http://account:3000/1.0/accounts/marketing;
+        }
+
+        location /1.0/accounts/administrators {
+            auth_request /1.0/accounts/authenticate;
+            proxy_pass http://account:3000/1.0/accounts/administrators;
         }
     }
 }
