--- a/nginx.conf
+++ b/nginx.conf
@@ -9,6 +9,8 @@ http {
 
         root /usr/share/nginx/html;
 
+        # Authentication
+
         location /1.0/accounts/authenticate {
             if ($request_method = OPTIONS) {
                 return 204;
@@ -64,6 +66,12 @@ http {
         location /1.0/accounts/administrators {
             auth_request /1.0/accounts/authenticate;
             proxy_pass http://account:3000/1.0/accounts/administrators;
+        }
+
+        # Payment
+
+        location /1.0/payments/check {
+            proxy_pass http://payment:3000/1.0/payments/check;
         }
     }
 }
