feat(nginx conf): add payment module routes

--- a/nginx.conf
+++ b/nginx.conf
@@ -29,6 +29,10 @@ http {
             proxy_pass http://account:3000/1.0/accounts/check;
         }
 
+        location /1.0/accounts/register {
+            proxy_pass http://account:3000/1.0/accounts/register;
+        }
+
         location /1.0/accounts/login {
             proxy_pass http://account:3000/1.0/accounts/login;
         }
@@ -72,6 +76,21 @@ http {
 
         location /1.0/payments/check {
             proxy_pass http://payment:3000/1.0/payments/check;
+        }
+
+        location /1.0/payments/pay {
+            auth_request /1.0/accounts/authenticate;
+            proxy_pass http://payment:3000/1.0/payments/pay;
+        }
+
+        location /1.0/payments/create {
+            auth_request /1.0/accounts/authenticate;
+            proxy_pass http://payment:3000/1.0/payments/create;
+        }
+
+        location /1.0/payments/payments {
+            auth_request /1.0/accounts/authenticate;
+            proxy_pass http://payment:3000/1.0/payments/payments;
         }
     }
 }
