--- a/nginx.conf
+++ b/nginx.conf
@@ -3,9 +3,14 @@ events {
 }
 
 http {
+
+
+
+
     server {
         listen 80;
         server_name localhost;
+
 
         root /usr/share/nginx/html;
 
@@ -39,7 +44,7 @@ http {
         }
 
         location /1.0/accounts/users {
-            auth_request /1.0/accounts/authenticate;
+        #    auth_request /1.0/accounts/authenticate;
             proxy_pass http://account:3000/1.0/accounts/users;
         }
 
@@ -66,6 +71,20 @@ http {
         location /1.0/accounts/administrators {
             auth_request /1.0/accounts/authenticate;
             proxy_pass http://account:3000/1.0/accounts/administrators;
+        }
+        location /1.0/accounts/register {
+            if ($request_method = OPTIONS) {
+                add_header 'Access-Control-Allow-Origin' '*';
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, DELETE, PUT';
+                add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
+                return 204;
+            }
+            if ($request_method = POST) {
+                add_header 'Access-Control-Allow-Origin' '*';
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, DELETE, PUT';
+                add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
+            }
+            proxy_pass http://account:3000/1.0/accounts/register;
         }
 
         # Payment
