refactor(config): change account service name + isolate documentation routes

--- a/nginx.conf
+++ b/nginx.conf
@@ -9,7 +9,25 @@ http {
 
         root /usr/share/nginx/html;
 
-        # Authentication
+        # Documentation
+
+        location /1.0/accounts/api-docs {
+            proxy_pass http://account:3000/api-docs;
+        }
+
+        location /1.0/order/api-docs {
+            proxy_pass http://order:3000/api-docs;
+        }
+
+        location /1.0/payment/api-docs {
+            proxy_pass http://payment:3000/api-docs;
+        }
+
+        location /1.0/restaurant/api-docs {
+            proxy_pass http://restaurant:3000/api-docs;
+        }
+
+        # Account
 
         location /1.0/accounts/authenticate {
             if ($request_method = OPTIONS) {
