feat(config): add order service routes

--- a/nginx.conf
+++ b/nginx.conf
@@ -90,6 +90,17 @@ http {
             proxy_pass http://account:3000/1.0/accounts/administrators;
         }
 
+        # Order
+
+        location /1.0/orders/check {
+            proxy_pass http://payment:3000/1.0/orders/check;
+        }
+
+        location /1.0/orders/ {
+            auth_request /1.0/accounts/authenticate;
+            proxy_pass http://payment:3000/1.0/orders/;
+        }
+
         # Payment
 
         location /1.0/payments/check {
