feat(config): add restaurant service routes

--- a/nginx.conf
+++ b/nginx.conf
@@ -93,12 +93,12 @@ http {
         # Order
 
         location /1.0/orders/check {
-            proxy_pass http://payment:3000/1.0/orders/check;
+            proxy_pass http://order:3000/1.0/orders/check;
         }
 
         location /1.0/orders/ {
             auth_request /1.0/accounts/authenticate;
-            proxy_pass http://payment:3000/1.0/orders/;
+            proxy_pass http://order:3000/1.0/orders/;
         }
 
         # Payment
@@ -120,6 +120,17 @@ http {
         location /1.0/payments/payments {
             auth_request /1.0/accounts/authenticate;
             proxy_pass http://payment:3000/1.0/payments/payments;
+        }
+
+        # Restaurant
+
+        location /1.0/restaurants/check {
+            proxy_pass http://restaurant:3000/1.0/restaurants/check;
+        }
+
+        location /1.0/restaurants/ {
+            auth_request /1.0/accounts/authenticate;
+            proxy_pass http://restaurant:3000/1.0/restaurants/;
         }
     }
 }
